...
              ),
              Padding(
                padding: EdgeInsetsDirectional.fromSTEB(0.0, 25.0, 0.0, 0.0),
                child: Container(
                  width: 300.0,
                  child: TextFormField(
                    key: ValueKey('signupEmail_2ckp'),
                    controller: _model.signupEmailTextController,
                    focusNode: _model.signupEmailFocusNode,
                    autofocus: false,
                    obscureText: false,
                    decoration: InputDecoration(
                      isDense: true,
...
              ),
              Padding(
                padding: EdgeInsetsDirectional.fromSTEB(0.0, 25.0, 0.0, 0.0),
                child: Container(
                  width: 300.0,
                  child: TextFormField(
                    key: ValueKey('signupPassword_1wnh'),
                    controller: _model.signupPasswordTextController,
                    focusNode: _model.signupPasswordFocusNode,
                    autofocus: false,
                    obscureText: !_model.signupPasswordVisibility,
                    decoration: InputDecoration(
                      isDense: true,
...
              ),
              Padding(
                padding: EdgeInsetsDirectional.fromSTEB(0.0, 25.0, 0.0, 0.0),
                child: Container(
                  width: 300.0,
                  child: TextFormField(
                    key: ValueKey('signupConfirmPassword_kdm9'),
                    controller: _model.signupConfirmPasswordTextController,
                    focusNode: _model.signupConfirmPasswordFocusNode,
                    autofocus: false,
                    obscureText: !_model.signupConfirmPasswordVisibility,
                    decoration: InputDecoration(
                      isDense: true,
...
                  ),
                ),
              ),
              Padding(
                padding: EdgeInsetsDirectional.fromSTEB(0.0, 25.0, 0.0, 0.0),
                child: FFButtonWidget(
                  key: ValueKey('Button_kuv7'),
                  onPressed: () async {
                    logFirebaseEvent('SIGN_UP_PAGE_PAGE_SIGN_UP_BTN_ON_TAP');
                    logFirebaseEvent('Button_auth');
                    GoRouter.of(context).prepareAuthEvent();
                    if (_model.signupPasswordTextController.text !=
                        _model.signupConfirmPasswordTextController.text) {
...
