...
                autovalidateMode: AutovalidateMode.always,
                child: Padding(
                  padding: EdgeInsetsDirectional.fromSTEB(0.0, 80.0, 0.0, 0.0),
                  child: Container(
                    width: 300.0,
                    child: TextFormField(
                      key: ValueKey('NameVar_s8in'),
                      controller: _model.nameVarTextController,
                      focusNode: _model.nameVarFocusNode,
                      onChanged: (_) => EasyDebounce.debounce(
                        '_model.nameVarTextController',
                        Duration(milliseconds: 2000),
                        () => safeSetState(() {}),
...
                  ),
                ),
              ),
              Padding(
                padding: EdgeInsetsDirectional.fromSTEB(0.0, 50.0, 0.0, 0.0),
                child: FFButtonWidget(
                  key: ValueKey('Button_hob0'),
                  onPressed: () async {
                    logFirebaseEvent('ON_BOARDING_PAGE_NEXT_BTN_ON_TAP');
                    logFirebaseEvent('Button_update_app_state');
                    FFAppState().Name = _model.nameVarTextController.text;
                    safeSetState(() {});
                    logFirebaseEvent('Button_validate_form');
...
